# gh-tt

./: .coveragerc  .gh-alias.yml  .gh_alias.yml  .git-blame-ignore-revs  .gitconfig  .gitignore  .semver.config  .tt-config.json  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Pipfile  README.md  RESPONSIBLES  __init__.py  cspell.json  gh-tt  gh_tt.py  justfile  pyproject.toml  pytest.ini  release-note.sh  setup.py  zizmor.yml
.devcontainer/: .gh_alias.yml  devcontainer.json  gh-login.sh  postCreateCommand.sh
.flox/: env.json
.flox/env/: manifest.toml
.githooks/: pre-commit  pre-commit.py
.github/: dependabot.yaml
.github/instructions/: general.instructions.md  summary.instructions.md
.github/workflows/: callable_cspell_spell_check.yaml  callable_cspell_spelling.yaml  callable_pytest_matrix.yaml  callable_ruff_format.yaml  callable_ruff_lint.yaml  callable_ty_type_check.yaml  callable_ty_typecheck.yaml  ci.yml  end_to_end_test.yml  integration_test.yml  issue_branch_push.yml  pytest_hypothesis.yml  python-app.yml  ready.yml  release_semver.yml  wrapup.yml
.github/workflows/helpers/: set-status
classes/: .tt-config.json  Devbranch.py  __init__.py  codeowners.py  config.py  devbranch.py  gitter.py  issue.py  label.py  lazyload.py  project.py  projectitem.py  props.json  props.jsonc  responsibles.py  runner.py  semver.py  version.py
docs/: CODEOWNERS  Codeowners.md  class-diagram.md  migration_guide.md  new-perspective.md  responsibles.md  semver-command.md  semver_how_to_release.md  workflow.md
docs/decisions/: 2026-01-23_workflow-update.md  2026-01-27_refactor.md
docs/specs/: 2026-03-12_spec-deliver-poll-checks.md  2026-03-23_config_refactor.md  2026-03-23_semver-testing.md
gh_tt/: __main__.py  deliver.py  gh_tt.py  git.py  issue.py  repo.py  shell.py  workon.py
gh_tt/classes/: .tt-config.json  config.py  devbranch.py  gitter.py  issue.py  label.py  lazyload.py  project.py  props.jsonc  responsibles.py  semver.py  status.py  sync.py
gh_tt/commands/: command.py  definitions.py  gh.py  git.py  graph.py
gh_tt/modules/: tt_handlers.py  tt_parser.py
gh_tt/tests/: conftest.py  env_builder.py  test_config.py  test_deliver.py  test_devbranch.py  test_devbranch_experimental.py  test_devbranch_integration.py  test_gitter.py  test_handlers.py  test_issue.py  test_label.py  test_lazyload.py  test_parser.py  test_parser_reopen_removed.py  test_parser_semver_list_filters.py  test_parser_semver_list_sha.py  test_parser_semver_top_level.py  test_poll_checks.py  test_project.py  test_responsibles.py  test_semver.py  test_semver_list_sha.py  test_status._py  test_status.py  test_sync.py  test_workon.py  testbed.py
gh_tt/tests/commands/: test_command.py  test_graph.py
gh_tt/tests/data/: .tt-config-project.json
gh_tt/tests/data/devbranch/: devbranch_responsibles_comment.json  main.json
gh_tt/tests/data/issue/: issue_responsibles_comment.json
gh_tt/tests/data/semver/: semver_loaded_release_and_prerelease.json
helpers/: milestone.sh  missing_feature_labels.py  reset_commit_statuses.sh
scripts/: install_local_gh_tt.py
src/gh_tt/: __main__.py  configuration.py  deliver.py  gh_tt.py  self_commands.py  shell.py  tt_handlers.py  workon.py
src/gh_tt/classes/: config.py  devbranch.py  gitter.py  issue.py  label.py  lazyload.py  responsibles.py  semver.py  sync.py
src/gh_tt/cli/: gh_tt.py  tt_handlers.py  tt_parser.py
src/gh_tt/commands/: __init__.py  gh.py  git.py  shell.py
src/gh_tt/legacy/: gitter.py  lazyload.py  props.jsonc  semver.py
src/gh_tt/modules/: configuration.py  tt_handlers.py  tt_parser.py
src/gh_tt/tests/: test_devbranch.py  test_gitter.py  test_parser.py  test_semver.py  test_semver_prerelease.py
src/gh_tt/tests/data/semver/: semver_loaded_prefix.json
tests/: __init__.py  conftest.py  env_builder.py  test_codeowneres.py  test_config.py  test_configuration.py  test_deliver.py  test_devbranch.py  test_devbranch_integration.py  test_gh-semver-no-subcmd.py  test_gh-semver-smoketest.py  test_gh-semver-unittest.py  test_gh.py  test_gitter.py  test_handlers.py  test_issue.py  test_label.py  test_lazyload.py  test_main.py  test_new_config.py  test_parser.py  test_parser_reopen_removed.py  test_parser_semver_list_sha.py  test_parser_semver_top_level.py  test_poll_checks.py  test_project.py  test_projectitem.py  test_responsibles.py  test_semver.py  test_semver_list_sha.py  test_semver_note_with_from_to.py  test_workon.py  testbed.py
tests/data/: .tt-config-good.json  .tt-config-malformed.json  .tt-config-project.json  .tt-config-squeeze.json
tests/data/devbranch/: .tt-config-set_issue.json  .tt-config-squeeze.json  devbranch-squeeze.json  workon_reuse_issue_branch.json
tests/data/semver/: semver3.json  semver_loaded_release.json
tests/data/sync/: gh_tt_labels.json
tests/legacy/: test_parser_semver_list_filters.py  test_parser_semver_list_sha.py  test_parser_semver_top_level.py  test_semver.py  test_semver_list_sha.py  test_semver_prerelease.py
tests/legacy/data/semver/: semver_with_one_release.json
