[project]
name = "gh-tt"
version = "0.0.1"
description = "GitHub extension automating trunk-based development"
requires-python = ">=3.12"
authors = [
    {name = "Lars Kruse", email = "lars@lakruzz.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["github", "trunk-based-development", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "async-lru>=2.1.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.138.2",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
]


[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
required-version = '>=0.10, <0.11'


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "temp",
]

# Generous line length for wide screens
line-length = 100

indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "I",
    "ERA",
    "F",
    "E",
    "S",
    "RUF",
    "SIM",
    "UP",
    "N",
    "ASYNC",
    "FBT",
    "A",
    "C4",
    "C90",
    "DTZ",
    "T",
    "ISC",
    "PIE",
    "PT",
    "RET",
    "TID",
    "ARG",
    "PTH",
    "PERF",
    "FURB"
]

ignore = [
    # Allow use of `assert`
    "S101",
    # Allow use of `print()`
    "T201",
    # The vast majority of violations for this rule
    # are comments or f-strings. Since there's 100+
    # error coming up which have little effect on the
    # code, I'm ignoring the rule for now. @vemolista
    "E501",
    # Known for false positives
    "S603",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = [
    "gh_tt/classes/*.py",
    "gh_tt/modules/*.py",
    "gh_tt/tests/testbed.py",
    "gh_tt/tests/test_config.py",
    "gh_tt/tests/test_devbranch_integration.py",
    "gh_tt/tests/test_devbranch.py",
    "gh_tt/tests/test_gitter.py",
    "gh_tt/tests/test_handlers.py",
    "gh_tt/tests/test_issue.py",
    "gh_tt/tests/test_label.py",
    "gh_tt/tests/test_parser.py",
    "gh_tt/tests/test_parser_semver_list_filters.py",
    "gh_tt/tests/test_parser_semver_list_sha.py",
    "gh_tt/tests/test_parser_semver_top_level.py",
    "gh_tt/tests/test_semver_list_sha.py",
    "gh_tt/tests/test_semver_note_with_from_to.py",
    "gh_tt/tests/test_semver_prerelease.py",
    "gh_tt/tests/test_semver.py",
    "gh_tt/tests/test_status.py",
    "gh_tt/tests/test_sync.py",
    "helpers/**"
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests",
    "dev: these tests are for development purposes - not necessarily mocked or stable, used by development team in the devcontainer",
    "unittest: these tests are for unit testing",
    "integration: integration tests",
    "end_to_end: tests touching systems out of our control"
]

asyncio_mode = "auto"

# Ignore the temp directory during test collection
testpaths = [
    "gh_tt/tests"
]
norecursedirs = [
    "temp",
    ".git",
    ".venv",
    "__pycache__",
    ".hypothesis"
]
log_file = "logs/test.log"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s - %(funcName)s - %(module)s - Line:%(lineno)d - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "DEBUG"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(funcName)s - %(module)s - Line:%(lineno)d - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
# Include the main CLI script and the classes directory
source = [
    "gh_tt/"
]

# Exclude test files
omit = [
    "*/tests/*",
    "gh_tt/modules/*",
    "setup.py",
    "gh_*.py",
    "temp/*"
]

[tool.coverage.report]
# Fail the build if the coverage is less than threshold
fail_under = 54

# Skip empty files
skip_empty = true
