[project]
name = "gh-tt"
version = "0.0.1"
description = "GitHub extension automating trunk-based development"
requires-python = ">=3.12"

dependencies = [
    "async-lru==2.3.0",
    "pydantic==2.12.5",
    "rich==14.3.3",
]

[dependency-groups]
dev = [
    "hypothesis==6.151.9",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
    "ruff==0.15.7",
    "ty==0.0.25",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
required-version = '>=0.11.1, <0.12'

[tool.ty.src]
exclude = [
    "src/gh_tt/legacy/*.py",
    "tests/legacy/*.py",
    "tests/test_handlers.py",
    "tests/test_parser.py",
]

include = ["src", "tests", ".githooks/pre-commit"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "temp",
]

extend-include = [".githooks/pre-commit"]

# Generous line length for wide screens
line-length = 100
indent-width = 4

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "I",
    "ERA",
    "F",
    "E",
    "S",
    "RUF",
    "SIM",
    "UP",
    "N",
    "ASYNC",
    "FBT",
    "A",
    "C4",
    "C90",
    "DTZ",
    "T",
    "ISC",
    "PIE",
    "PT",
    "RET",
    "TID",
    "ARG",
    "PTH",
    "PERF",
    "FURB"
]

ignore = [
    # Allow use of `assert`
    "S101",
    # Allow use of `print()`
    "T201",
    # The vast majority of violations for this rule
    # are comments or f-strings. Since there's 100+
    # error coming up which have little effect on the
    # code, I'm ignoring the rule for now. @vemolista
    "E501",
    # Known for false positives
    "S603",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
exclude = [
    "src/gh_tt/legacy/*.py",
    "tests/legacy/*.py",
]

[tool.pytest.ini_options]
markers = [
    "end_to_end: tests intended for GitHub Actions runs",
    "legacy: tests of legacy code"
]

asyncio_mode = "auto"

# Ignore the temp directory during test collection
testpaths = [
    "tests"
]
norecursedirs = [
    "temp",
    ".git",
    ".venv",
    "__pycache__",
    ".hypothesis"
]
log_file = "logs/test.log"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s - %(funcName)s - %(module)s - Line:%(lineno)d - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "DEBUG"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(funcName)s - %(module)s - Line:%(lineno)d - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
# Include the main CLI script
source = [
    "src/"
]

# Exclude test files
omit = [
    "tests/*",
]

[tool.coverage.report]
# Fail the build if the coverage is less than threshold
fail_under = 53

# Skip empty files
skip_empty = true
